Fixed up alignment, routed links to the right places.

--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ a:active {
 
 li {
     list-style-type: none;
-    margin: 15px;
+    margin-right: 15px;
     display: inline;
 }
 
